--- a/config/config.json
+++ b/config/config.json
@@ -3,21 +3,21 @@
     "username": "root",
     "password": null,
     "database": "library",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "sqlite"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "library",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "sqlite"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "library",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "sqlite"
   }
 }
