--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/raphaelSeguin/library-manager#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.22.1",
     "pug": "^2.0.3",
     "sequelize": "^4.37.7",
     "sequelize-cli": "^4.0.0",
