--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "library",
+    "database": "library.db",
     "host": "localhost",
     "dialect": "sqlite"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "library",
+    "database": "library.db",
     "host": "localhost",
     "dialect": "sqlite"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "library",
+    "database": "library.db",
     "host": "localhost",
     "dialect": "sqlite"
   }
