--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,14 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "library.db",
-    "host": "localhost",
+    "storage": "library.db",
     "dialect": "sqlite"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "library.db",
-    "host": "localhost",
+    "storage": "library.db",
     "dialect": "sqlite"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "library.db",
-    "host": "localhost",
+    "storage": "library.db",
     "dialect": "sqlite"
   }
 }
